--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,3 +34,28 @@ jobs:
     - name: Test with pytest
       run: |
         pytest test.py
+  push_to_docker_hub:
+       name: Push Docker image to Docker Hub
+       runs-on: ubuntu-latest
+       needs: build
+       steps:
+        - name: Check out the repo
+          uses: actions/checkout@v2
+  
+        - name: Push to Docker Hub
+          uses: docker/build-push-action@v2
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+            repository: dmitrytrc/replist
+            tag_with_ref: true
+  send_message:
+    runs-on: ubuntu-latest
+    needs: push_to_docker_hub
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} Everything DONE!        
